2006-12-18  Stepan Kasal  <skasal@redhat.com>

	* configure.ac: Call FRYSK_DO_ARCH32_TEST.

2006-12-14  Adam Jocksch  <ajocksch@redhat.com>

	* bootstrap.sh: No longer uses --cni (bug #3687).

2006-12-14  Nurdin Premji  <npremji@redhat.com>

	* Makefile.am (RUNTESTDEFAULTFLAGS): removed --tool expr so util tests will be run as well.

2006-12-13  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (pkglib32_PROGRAMS): Rename pkglib_arch32_PROGRAMS.

2006-12-11  Andrew Cagney  <cagney@redhat.com>

	* .cvsignore: Clean up; remove TestJUnits.java; add files.list.

2006-12-10  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Replace pkglibexec with pkglib.

2006-12-08  Andrew Cagney  <cagney@redhat.com>

	* bootstrap.sh: Pass --cni to Makefile.gen.sh.

2006-12-08  Nurdin Premji  <npremji@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Added -lstdc++.

2006-12-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (GEN_SOURCEPATH, GEN_GCJ_LDADD): Remove references
	to frysk-sys.
	* .project: Ditto.
	* .classpath: Ditto.

2006-11-28  Stepan Kasal  <skasal@redhat.com>

	* Makefile.am (EXTRA_DIST): frysk/lang/ChangeLog was moved to
	frysk/value.

2006-11-14  Stepan Kasal  <skasal@redhat.com>

	* configure.ac: The included file `common/acinclude.m4' was renamed
	to `common/frysk-common.ac'.

2006-11-13  Stan Cox  <scox@redhat.com>

	* Makefile.am (RUNTESTDEFAULTFLAGS): Use $(srcdir).

2006-10-27  Nurdin Premji <npremji@redhat.com>

	* Makefile.am (EXTRA_DIST): added frysk/util/ChangeLog

2006-10-12  Stepan Kasal  <skasal@redhat.com>

	* Makefile.am (funit-child-alias): Do not build, just cp funit-alias.
	(arch32/funit-child-alias): Likewise.

2006-10-11  Stepan Kasal  <skasal@redhat.com>

	* Makefile.am (frysk_pkglibexecdir_arch32_funit_child_alias_SOURCES):
	New variable, to fix `make dist'.

2006-10-11  Andrew Cagney  <cagney@redhat.com>

	* bootstrap.sh: Pass -Werror to automake.

2006-09-27  Nurdin Premji <npremji@redhat.com>
