@@ -1,3 +1,8 @@
+2006-12-18  Andrew Cagney  <cagney@redhat.com>
+
+	* Makefile.am (install-dogtail-scripts-local) 
+	(uninstall-dogtail-scripts-local): New targets.
+
 2006-12-11  Andrew Cagney  <cagney@redhat.com>
 
 	* .cvsignore: Clean up; add files.list.
