@@ -1,3 +1,8 @@
+2006-12-18  Andrew Cagney  <cagney@redhat.com>
+
+	* Makefile.am (install-dejagnu-testsuite-local)
+	(uninstall-dejagnu-testsuite-local): New targets.
+
 2006-12-18  Stepan Kasal  <skasal@redhat.com>
 
 	* configure.ac: Call FRYSK_DO_ARCH32_TEST.
